--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,43 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: rgba(64, 244, 244, 0.963);
-  list-style-type: none;
+  background-color: rgba(228, 203, 232, 0.548);
+  list-style-type:none;
+  
 }
+
+
+/*fuentes*/
+
+h1 {
+  text-align:start;
+  font-size: 60px;
+  display: flex;
+  font-family:Cambria;
+  color: rgba(111, 14, 109, 0.969);
+  margin: 10px 0px 0px 250px;
+}
+
+h2 {
+  display: flex;
+  font-size: 50px;
+  text-align:left;
+  margin:1px ;
+  color: rgba(3, 0, 2, 0.941);
+}
+
+
+.texto-de-la-pagina {
+  display: flex;
+  font-family: 'Dancing Script';
+  color: rgba(11, 3, 3, 0.793);
+  font-size: 40px;
+}
+
+
+
+/*contenedores*/
+
 .container-grid {
   display: grid;
   grid-template-columns: repeat(1, 100%);
@@ -12,38 +46,7 @@
     "header header header"
     "secciones secciones secciones"
     "footer footer footer";
-  justify-content: center;
-}
-
-.header {
-  border: 3px solid rgba(64, 244, 244, 0.963);
-  grid-area: header;
-}
-.navegador {
-  width: 100%;
-  height: 20px;
-  grid-area: nav;
-  border-bottom: 1px solid blue;
-  border-radius: 15px;
-}
-
-.secciones {
-  border: 3px solid rgba(64, 244, 244, 0.963);
-  grid-area: secciones;
-}
-
-.nav-1 {
-  display: flex;
-  width: 100%;
-  justify-content: flex-end;
-}
-.nav-1 a {
-  padding: 5px;
-  font-size: 40px;
-}
-.luna-murcielago {
-  display: flex;
-  margin-left: 400px;
+  justify-content:center;
 }
 
 .borderBlood-img img {
@@ -51,88 +54,120 @@
   height: 320px;
 }
 
-.texto-de-la-pagina {
-  color: red;
-  font-size: 30px;
-}
-.container2 {
-  margin: 20px;
-}
-.nav-2 {
-  border: 1px solid #000;
-  font-size: 30px;
-  display: flex;
-  justify-content: space-around;
-  border-radius: 5px;
-  margin-top: 100px;
-}
-h1 {
-  font-size: 60px;
-  position: absolute;
-  font-family: Cambria, "Times New Roman", serif;
-  color: crimson;
-  margin: 20px 0 0 90px;
+
+/*container-2*/
+
+    
+
+.header {
+  border: 3px solid rgba(228, 203, 232, 0.548);
+  grid-area: header;
+  margin-top: 0PX;
+  margin-right: 0px;
+
 }
 
-/*imagenes del body*/
+
+.navegador {
+  width: 100%;
+  height: 1px;
+  display: flex;
+  grid-area: nav;
+  border-bottom: 1px rgba(228, 203, 232, 0.548);
+  border-top:  10px;
+  
+}
+
+
+
+/*imagenes-de-redes-sociales*/
+.Logo-red-social{
+  align-content: flex-end;
+  padding-right: 1px;
+  margin-left: 100px;
+  width: 60px;
+  height: 60px;
+}
+
+
+
+
+/*Navegadores-1-2*/
+
+.nav-1 {
+  margin-top: 3px;
+  display: flex;
+  width: 100%;
+  justify-content:flex-end ;
+  }
+
+.nav-1  {
+  margin: 10px;
+  display: flex;
+  padding: 0px;
+  font-size: 40px;
+}
+
+
+
+.luna-murcielago img {
+  display: flex;
+  margin-left: 700px 0px 1px 0px;
+  
+  
+}
+
+
+.imagenes-nav2 {
+display:flex;
+  margin-top: 800px;
+  
+  justify-content: space-around;
+
+}
+.imagenes-nav2 img {
+  background-color: none;
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+  height: 200px;
+  margin: 0px;
+  border-width: 0px;
+  border-color: rgba(138, 27, 138, 0.422);
+  border-style:double;
+}
+
+
+ /*imagenes del body*/
+
 .colmillos-maquillaje {
   width: 300px;
   height: 300px;
 }
 .img-spider {
-  padding-right: 300px;
+  padding: 50px 200px 50px 50px;
   width: 120px;
-  height: 200px;
-}
-.img-ColmillosMaquillaje {
-  width: 50px;
-  height: 40px;
+  height: 400px;
 }
 
-.cereza-craneo {
-  height: 250px;
-  width: 250px;
-}
 
-.img-cerezasPixeladas {
-  width: 200px;
-  height: 260;
-}
 
 .img-zapatillasRock {
-  width: 400px;
+  width: 300px;
   height: 260px;
 }
 
 .img-chicaPinUp {
-  width: 200px;
+  width: 300px;
   height: 240px;
 }
 
-.img-accesorios {
-  width: 200px;
-  height: 250px;
-}
 
-h2 {
-  font-size: 70px;
-  color: black;
-}
-
-.imagenes-nav2 {
-  display: flex;
-  justify-content: space-around;
-  margin: 20px;
-}
-.imagenes-nav2 img {
-  width: 200px;
-  height: 200px;
-  margin: 40px;
-}
 
 /*footers*/
+
 .footer {
-  border: 2px solid rgb(106, 219, 230);
+  border: 2px solid rgba(228, 203, 232, 0.548);
   grid-area: footer;
   padding: 2px 1px 2px 1px;
   float: right;
@@ -141,6 +176,7 @@ h2 {
   flex-direction: row;
   display: flex;
   justify-content: space-between;
+  
 }
 .footer-container ul {
   display: flex;
@@ -157,10 +193,4 @@ li {
   width: 70px;
   height: 70px;
   margin: 10px;
-}
-
-@media  {
-  
-}
-  
 }
