--- a/css/style.css
+++ b/css/style.css
@@ -55,18 +55,17 @@ h2 {
 }
 
 
-/*container-2*/
-
     
-
 .header {
   border: 3px solid rgba(228, 203, 232, 0.548);
   grid-area: header;
   margin-top: 0PX;
-  margin-right: 0px;
+  margin-right: 1px;
 
 }
 
+
+/*Navegador-1*/
 
 .navegador {
   width: 100%;
@@ -74,65 +73,61 @@ h2 {
   display: flex;
   grid-area: nav;
   border-bottom: 1px rgba(228, 203, 232, 0.548);
-  border-top:  10px;
+  border-top:  3px;
+  
   
 }
+.nav-1 {
+  margin-top: 40px;
+  margin-right: 10px;
+  display: flex;
+  width: 100%;
+  justify-content:flex-end ;
+  font-size: 40px;
+  
+  }
 
 
 
 /*imagenes-de-redes-sociales*/
 .Logo-red-social{
+  grid-area: secciones;
   align-content: flex-end;
   padding-right: 1px;
   margin-left: 100px;
-  width: 60px;
-  height: 60px;
-}
-
-
-
-
-/*Navegadores-1-2*/
-
-.nav-1 {
-  margin-top: 3px;
-  display: flex;
-  width: 100%;
-  justify-content:flex-end ;
-  }
-
-.nav-1  {
-  margin: 10px;
-  display: flex;
-  padding: 0px;
-  font-size: 40px;
+  width: 50px;
+  height: 50px;
 }
 
 
 
 .luna-murcielago img {
   display: flex;
-  margin-left: 700px 0px 1px 0px;
+  margin-left: 150px;
   
   
 }
 
 
 .imagenes-nav2 {
-display:flex;
-  margin-top: 800px;
-  
+  grid-area: header;
+  display:flex;
+  margin-top: 800px; 
+  margin-right: 200PX;
   justify-content: space-around;
+
 
 }
 .imagenes-nav2 img {
+  grid-area: header;
   background-color: none;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   width: 200px;
   height: 200px;
   margin: 0px;
-  border-width: 0px;
+  border-width: 4px;
   border-color: rgba(138, 27, 138, 0.422);
   border-style:double;
 }
@@ -145,7 +140,7 @@ display:flex;
   height: 300px;
 }
 .img-spider {
-  padding: 50px 200px 50px 50px;
+  padding: 50px 150px 50px 50px;
   width: 120px;
   height: 400px;
 }
@@ -194,3 +189,21 @@ li {
   height: 70px;
   margin: 10px;
 }
+
+
+
+
+ /*medias-queries*/
+  
+
+ @media screen and (min-width: 992px) {
+ 
+ }
+
+ @media screen and (min-width: 768px) {
+
+ }
+
+ @media screen and (min-widt:576pz) {
+
+ }
